<resources>
    <string name="app_name">H App</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="log_in">ログインする</string>
    <string name="forgotten_password"><u>パスワードをお忘れの方はこちら</u></string>
    <string name="message">メッセージ</string>
    <string name="targets">Targets</string>
    <string name="load_picture">Load Picture</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">お名前</string>
    <string name="re_pass">パスワード再入力</string>
    <string name="password">パスワード</string>
    <string name="missing_field">Please fill out missing field.</string>
    <string name="password_mismatch">Your password does not match.</string>
    <string name="new_member_registeration">新会員登録</string>
    <string name="login">ログイン</string>
    <string name="email_address">Email address</string>
    <string name="new_password">新しいパスワード</string>
    <string name="reset_pass">Set a password and login</string>
    <string name="reseting_password">Resetting a password</string>
    <string name="reset_pass_instruction">Please enter the registered email address and tap the button below.
        A mail with the URL for resetting will be sent. \n If you do not receive the e-mail, please re-tap the button after confirming that you do not set domain rejected setting.</string>
    <string name="send_reset_email">Send resetting email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">みなさんこんにちは、田中です。
今大手広告代理店と某自動車メーカーのウェブサイトを制作しており、デザイナーを募集しています。
火急の案件につき、すぐ制作に入れる方だと嬉しいです。
詳細は以下の通りです。ご興味お持ちの方…</string>
    <string name="post">投稿する</string>
    <string name="enter_post_content">投稿内容を入力</string>
    <string name="block">ブロックする</string>
    <string name="no_results_found">No results found.</string>
    <string name="configuration">設定</string>
    <string name="logout">ログアウト</string>
    <string name="information">基本情報</string>
    <string name="edit_profile">プロフィールの編集</string>
    <string name="save">保存する</string>
    <string name="profile_statement">プロフィール文を入力する</string>
    <string name="change_email">メールアドレスの変更</string>
    <string name="mail_address">メールアドレス</string>
    <string name="change_password">パスワードの変更</string>
    <string name="current_password">現在のパスワード</string>
    <string name="re_enter_password">パスワード再入力</string>
    <string name="lang_settings">言語の設定</string>
    <string name="current_setting">現在の設定</string>
    <string name="japanese">日本語</string>
    <string name="english">English</string>
    <string name="user_name">田中太郎</string>
    <string name="post_date">2017年6月14日</string>
    <string name="to_log_out">ログアウトする</string>
    <string name="char_limit">15文字以内</string>
    <string name="front_end">フロントエンド</string>
    <string name="server_side">サーバーサイド</string>
    <string name="ios_app">iOSアプリ</string>
    <string name="android_app">Androidアプリ</string>
    <string name="app_design">アプリデザイン</string>
    <string name="web_design">ウェブデザイン</string>
    <string name="language">日本語</string>
    <string name="continue_logout">ログアウトしてもよろしいですか？</string>
    <string name="personal_info">基本情報</string>
    <string name="skills">スキル</string>
    <string name="now_im_free">いま暇</string>
    <string name="delete">削除する</string>
    <string name="cancel">キャンセル</string>
    <string name="delete_this_post">この投稿を削除しますか？</string>
    <string name="search_users">ユーザーの検索</string>
    <string name="search_by_name">名前もしくは会員番号で検索</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="situation">状況</string>
    <string name="再設定用URLを発行する">再設定用URLを発行する</string>
    <string name="timeline">タイムライン</string>
    <string name="reservation">ルーム予約</string>
    <string name="added_block">ブロックしました。</string>
    <string name="empty_mess">メッセージを入力ください</string>
    <string name="empty_name">氏名が入力されていません。</string>
    <string name="empty_passwd">パスワードが入力されていません。</string>
    <string name="empty_skills">スキルが選択されていません</string>
    <string name="fail_icon_save">アイコンの保存に失敗しました。	</string>
    <string name="hello_world">Hello world</string>
    <string name="send">送信</string>
    <string name="enter_message">メッセージを入力</string>
    <string name="authenticating">認証する</string>
    <string name="today">今日は </string>
    <string name="yesterday">昨日 </string>
    <string name="no_net_connection">インターネットに接続できません</string>
    <string name="retry">リトライ</string>
    <string name="password_updated">パスワードが更新されました</string>
    <string name="password_not_updated">パスワード変更エラー</string>
    <string name="password_incorrect">現在のパスワードが間違っています</string>
    <string name="updating_password">パスワードの更新</string>
    <string name="okay">はい</string>
    <string name="sent_message">あなたにメッセージを送った</string>
    <string name="four_or_more_char">4文字以上</string>
    <string name="email_updated">電子メールで更新</string>
    <string name="failed">失敗した</string>
    <string name="choose_lang">言語を選択する</string>
    <string name="skip">スキップ</string>
    <string name="_continue">持続する</string>
    <string name="send_post">このメッセージはすべての居住者に送信されます。あなたは本当にそれを実行したいですか？</string>
    <string name="make_reservation">予約する</string>
    <string name="room">ルーム</string>
    <string name="facility">施設</string>
    <string name="end">終了</string>
    <string name="reserved">予約済み</string>
    <string name="register_new_member">新規会員登録する</string>
    <string name="error">エラー</string>
    <string name="coudnt_refresh">フィードをリフレッシュできませんでした</string>
    <string name="sending">送信</string>
    <string name="congestion_situation">混雑状況</string>
    <string name="basic_info">基本情報</string>
    <string name="notifications">Notifications</string>
    <string name="change_lang">言語を変えてください</string>
    <string name="unblock">ブロックを解除</string>
    <string name="room_reservation">ルーム予約</string>
    <string name="start">開始</string>
    <string name="error_select_date">Start date cannot be less than current date</string>
    <string name="you">あなた</string>
    <string name="delete_res">delete</string>
    <string name="delete_reservation">Delete reservation?</string>
    <string name="now_free">turned \"now\" free</string>
    <string name="posted_timeline">posted it on timeline</string>
    <string name="reservation_created">Reservation created</string>
    <string name="password_min_char">パスワードは6文字以上でなければなりません</string>
    <string name="same_email">Same email entered</string>
    <string name="enable_auto_start_up">Enable auto start up</string>
    <string name="enable_auto_start">幸せの自動開始が通知を見逃すことを許可する</string>
    <string name="enable">Enable</string>
    <string name="no_more_posts">No more posts</string>
    <string name="discard">破棄</string>
    <string name="discard_post">Discard post?</string>
    <string name="percent">%</string>
    <string name="cant_reply">You can\'t reply to this conversation</string>
    <string name="select_skill">スキルを選択する</string>
    <string name="same_password_entered">Same password provided</string>
    <string name="no_selected_skills">Please choose selected target skills</string>
    <string name="reservation_mess">Room reservation in 1hour</string>
    <string name="licence_agreement">ライセンス契約</string>
    <string name="terms_of_service_details"><![CDATA[This Terms of Service (\"Terms of Service\") is a service (hereinafter referred to as \"The Service\") provided by 9 GATES Co., Ltd. (hereinafter referred to as \"The Company\") on this smartphone application It defines the terms of use of. For members of Co-work & Share. H (hereinafter referred to as \"users\"), use this service in accordance with these terms.]]></string>
    <string name="terms_of_service">Terms of service</string>
    <string name="article_one">Article 1 (applicable)</string>
    <string name="article_one_details">These Terms shall apply to all relationships relating to the use of this Service between users and the Company.</string>
    <string name="article_two">Article 2 (Use registration)</string>
    <string name="article_two_bullet_one">\u25CF &#160; Registration applicant applies for registration of use according to the method defined by the company,
        and approves this, and registration of use will be completed.</string>
    <string name="article_two_bullet_two">\u25CF &#160; We may not approve applications for use registration if we determine that the applicant for use registration has the following reasons and we do not under any obligation to disclose the reason.</string>
    <string name="article_two_dotted_one">\u25CC &#160; (1) &#160; When notifying of false matters at the time of application for use registration</string>
    <string name="article_two_dotted_two">\u25CC &#160; (2）In the case of an application from a person who has violated this agreement</string>
    <string name="article_two_dotted_three">\u25CC &#160; (3）In addition, when we judge that usage registration is not appropriate</string>
    <string name="article_three">Article 3 (User ID and Password Management)</string>
    <string name="article_three_bullet_one">\u25CF &#160; The user shall manage the user ID and password of this service at its own risk</string>
    <string name="article_three_bullet_two">\u25CF &#160; In any case, the user can not assign or lend the user ID and password to a third party. If the combination of user ID and password is logged in consistent with the registration information, we regard it as use by the user who registered the user ID.</string>
    <string name="article_four">Article 4 &#160; (Usage fee and payment method)</string>
    <string name="article_four_bullet_one">\u25CF &#160; The user shall be able to use this service free of charge</string>
    <string name="article_five">Article 5 (Prohibited Matters)</string>
    <string name="article_five_details">In using the service, the user should not do the following actions.</string>
    <string name="article_five_bullet_one">\u25CF &#160; (1）Acts that violate laws or public order and morals</string>
    <string name="article_five_bullet_two">\u25CF &#160; (2）Acts related to criminal acts</string>
    <string name="article_five_bullet_three">\u25CF &#160; (3）Acts of destroying or obstructing the function of our server or network</string>
    <string name="article_five_bullet_four">\u25CF &#160; (4）Acts that may interfere with the operation of our services</string>
    <string name="article_five_bullet_five">\u25CF &#160; (5）Acts of collecting or accumulating personal information etc. concerning other users</string>
    <string name="article_five_bullet_six">\u25CF &#160; (6）Act impersonating other users</string>
    <string name="article_five_bullet_seven">\u25CF &#160; (7）Acts of providing profit directly or indirectly to antisocial forces in connection with our services</string>
    <string name="article_five_bullet_eight">\u25CF &#160; (8）Other acts that we deem inappropriate</string>
    <string name="article_six">Article 6 (Suspension of provision of this service etc.)</string>
    <string name="article_six_bullet_one">\u25CF &#160; The Company shall be able to suspend or suspend the provision of all or part of the Service without notifying the user in advance if judging that there is any of the following reasons.</string>
    <string name="article_six_dotted_one">\u25CC &#160; (1）When performing maintenance, inspection, or updating of the computer system related to this service</string>
    <string name="article_six_dotted_two">\u25CC &#160; (2）When it becomes difficult to provide this service due to force majeure such as earthquake, lightning strike, fire, blackout or natural disaster</string>
    <string name="article_six_dotted_three">\u25CC &#160; (3）When a computer or a communication line stops due to an accident</string>
    <string name="report">Report</string>
    <string name="more_title">What do you want to do?</string>
</resources>