<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="co.work.fukouka.happ.activity.ResetPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/beta"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_reset_email"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:id="@+id/tb_title" />

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bottom_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/constraintLayout8"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/mail_address"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="example@xxx.com"
            android:gravity="end"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_email"
            android:layout_marginLeft="1dp"
            app:layout_constraintHorizontal_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_reset_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="10"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/reset_pass_instruction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/再設定用URLを発行する"
        android:id="@+id/btn_reset_pass"
        android:background="@drawable/button_background"
        android:textColor="@drawable/button_text_color"
        android:layout_marginLeft="23dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="23dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_detail" />

</android.support.constraint.ConstraintLayout>
